hphp/test/quick/hh_numbers.php.expectf
HipHop Fatal error: syntax error, unexpected T_HACK_ERROR in %s on line 2
